--- a/src/app/components/game-board/game-board.component.html
+++ b/src/app/components/game-board/game-board.component.html
@@ -4,15 +4,7 @@
     <img id="state-msg-img" *ngIf="gameState === EGameState.WON" src="./assets/trophy.svg" alt="winner image">
   </div>
 
-  <table
-    class="game-board-table"
-    [ngClass]="{
-      'wide': data.isWideBoard,
-      'won': gameState === EGameState.WON,
-      'lost': gameState === EGameState.LOST,
-      'large': data.isWideBoard
-    }"
-  >
+  <table class="game-board-table {{data.boardWidth}} {{gameState}}">
     <thead>
       <tr>
         <td></td>
@@ -25,14 +17,10 @@
         <th class="game-board-axes">{{axesLabels.y[rowI]}}</th>
 
         <ng-container *ngFor="let square of boardSquaresArr; index as squareI">
-          <td
-            *ngIf="squareI | matrixPipe : rowI : data.columns"
-            class="game-board-row-square"
-            [style]="{
-              width:''+squareWidthInPercent+'%',
-              paddingBottom: ''+squareWidthInPercent+'%'
-            }"
-            >
+          <td *ngIf="squareI | matrixPipe : rowI : data.columns" class="game-board-row-square" [style]="{ 
+              width: data.squareWidthInPercent + '%',
+              paddingBottom: data.squareWidthInPercent + '%' 
+            }">
             <app-game-board-square [square]="square" [gameState]="gameState"
               (squareClickedEmit)="squareClicked(squareI, $event)">
             </app-game-board-square>
