--- a/src/app/components/game-board/game-board-square/game-board-square.component.scss
+++ b/src/app/components/game-board/game-board-square/game-board-square.component.scss
@@ -1,33 +1,45 @@
 @import "../../../../styles.scss";
 
 .square-btn {
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     border: none;
-    background-color: rgba($color-primary, 0.85);
-    box-shadow: 0 0 5px 1px white;
-    transition: background-color 0.2s ease-out;
+    background-color: transparent;
     padding: 0;
     display: block;
-    position:absolute; //hi again
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-    &.won {
-        background-color: $color-blue;
+
+    &::after {
+        content: "";
+        height: 95%;
+        width: 95%;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        box-shadow: 0 0 5px 1px #ffffffaa;
+        border-radius: 5px;
+        background-color: rgba($color-primary, 0.85);
+        transition: background-color 0.2s ease-out;
     }
 
-    &:hover,
-    &:focus {
+    &:hover::after,
+    &:focus::after {
         background-color: rgba(#eee, 0.5);
     }
 
+    &.won::after {
+        background-color: $color-blue;
+    }
+
     &.clicked {
-        &.ship {
+        &.ship::after {
             background-color: rgba($color-red, 0.8);
         }
-        &:not(.ship) {
+        &:not(.ship)::after {
             background-color: rgba(35, 153, 70, 0.8);
         }
     }
@@ -49,7 +61,7 @@
         }
 
         &.vertical {
-            left: 1px;
+            left: 3px;
         }
 
         &:not(.vertical) {
@@ -67,6 +79,6 @@
     }
 }
 
-button.square-btn.ship.won {
+button.square-btn.ship.won::after {
     background-color: $color-blue;
 }
