--- a/src/app/components/game-board/game-board.component.scss
+++ b/src/app/components/game-board/game-board.component.scss
@@ -1,80 +1,84 @@
 @import "../../../styles.scss";
 
 :host {
-    text-align: center;
-    font-family: $font-display;
-    margin: auto;
-    display: block;
-    width: fit-content;
+  text-align: center;
+  font-family: $font-display;
+  margin: auto;
+  display: block;
+  width: fit-content;
 }
 
 .state-msg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-48%, -46%);
-    z-index: 1;
-    width: 100%;
-    max-width: 90%;
-    border-radius: 30px;
-    padding: 5px;
-    box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-48%, -46%);
+  z-index: 1;
+  width: 100%;
+  max-width: 90%;
+  border-radius: 30px;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .game-board {
+  margin: auto;
+  @media screen and (min-width: $phone-bp) {
     transform: translateX(-10px);
-    max-width: 1600px; //going big here
-    margin: auto;
+  }
 
-    &-axes {
-        color: white;
-        font-size: 14px;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-            "Helvetica Neue", sans-serif;
-        font-weight: 600;
-        padding: 2px;
+  &-axes {
+    color: white;
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
+    font-weight: 600;
+    padding: 2px;
+  }
+
+  &-table {
+    border-collapse: collapse;
+    margin: auto;
+    &.thin {
+      width: 400px;
+    }
+    &.normal {
+      width: 700px;
+    }
+    &.wide {
+      width: 70%;
+    }
+    &.won {
+      filter: blur(4px);
     }
 
-    &-table {
-      width:600px;
-      &.large {
-        width:1200px;
+    @media only screen and (max-width: $desktop-bp) {
+      &.normal {
+        width: 70%;
       }
       &.wide {
-         border-collapse: collapse;
-      }
-      &.won {
-          filter: blur(4px);
+        width: 100%;
       }
     }
 
-    &-row-square {
-        position: relative;
-        height:0; //bottom padding is calculated based on width so it's a great candidate here as we have no actual content in our cell.
-        // width: 44px;
-        //removed .large as computation moved to table now
+    @media only screen and (max-width: $tablet-bp) {
+      &.thin {
+        width: 80%;
+      }
+      &.normal {
+        width: 100%;
+      }
     }
-}
 
-
-@media only screen and (max-width: 1000px) {
-  .game-board {
-    &-table {
-      width:700px;
-      &.large {
-        width:900px;
+    @media only screen and (max-width: $phone-bp) {
+      &.thin {
+        width: 100%;
       }
     }
   }
-}
 
-@media only screen and (max-width: 600px) {
-  .game-board {
-    &-table {
-      width:400px;
-      &.large {
-        width:400px;
-      }
-    }
+  &-row-square {
+    position: relative;
+    height: 0; // bottom padding is calculated based on width so it's a great candidate here as we have no actual content in our cell.
   }
 }
