--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -13,15 +13,9 @@ header {
         margin-block: 20px 0;
         text-shadow: 0 0 20px white;
 
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: $phone-bp) {
             font-size: 60px;
         }
-    }
-}
-
-main {
-    @media screen and (min-width: 1200px) {
-        margin: auto;
     }
 }
 
@@ -37,7 +31,7 @@ main {
         }
     }
 
-    @media screen and (max-width: 1200px) {
+    @media screen and (max-width: $desktop-bp) {
         display: flex;
         justify-content: center;
     }
