--- a/src/app/components/new-game-form/new-game-form.component.html
+++ b/src/app/components/new-game-form/new-game-form.component.html
@@ -15,4 +15,8 @@
     <button type="submit" class="new-game-form-btn">
         New Game
     </button>
+
+    <button type="button" class="new-game-form-btn" (click)="toggleRhambous(gameLevelFormGroup)">
+        Toggle Rhambous
+    </button>
 </form>
