--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
 
 .battleship {
     @media screen and (min-width: $phone-bp) {
-        padding: 10px 20px 0 20px;
+        padding: 10px 20px 50px 20px;
     }
 
     @media screen and (max-width: $phone-bp) {
